[gd_scene load_steps=7 format=2]

[ext_resource path="res://Codigos/Locales/Objetos/VirusWiki.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Visuales/Sprites/ventana_virus.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clicBien.wav" type="AudioStream" id=4]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clic.wav" type="AudioStream" id=5]
[ext_resource path="res://Recursos/Sonoros/Incidentales/clicMal.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112.65, 121.117 )

[node name="Wiki" type="Node2D"]
script = ExtResource( 1 )

[node name="WikiV" type="Sprite" parent="."]
scale = Vector2( 1.47141, 1.47141 )
texture = ExtResource( 2 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="ClicBien" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ClicMal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
